meja/tests/wrong_num_args-fail.meja
type t('a, 'b) = ('a, 'b);

type u = t(int);
